--- a/chapter1.tex
+++ b/chapter1.tex
@@ -3,7 +3,6 @@
 \nomenclature{UOP}{University of Paris 11}
 \chapter{Internal Fine Tuning and Canonical Large Numbers}
 \label{chap:chapter_1}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -87,7 +86,7 @@ Note the `./figures/figure' in the example below.
 \label{fig:figure_label}
 \end{figure}
 
-\section {Cosmic Holography, Toponic Quantification and Cosmos vastness}
+\section{Cosmic Holography, Toponic Quantification and Cosmos vastness}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle\cite{bondi}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
@@ -163,12 +162,12 @@ The mathematical continuity being excluded by the above Calculative Principle, t
 time $$\lambdabar_{M} /c = 1.33 \times 10^{-104}s$$ is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
 
-\section {Evidence for Tachyonic Flickering Space-Time-Matter}
+\section{Evidence for Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 following considerations and observations confirm this hypothesis.
 
-\section {Single Electron Cosmology}
+\section{Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
@@ -192,7 +191,7 @@ From the Holographic two-step interaction [3], it was deduced that the Kotov per
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
 graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section III.VIII.
 
-\section {The Kotov Cosmic Coherent Oscillation Period}
+\section{The Kotov Cosmic Coherent Oscillation Period}
 
 The Kotov non-Doppler cosmic oscillation \cite{Lyuty} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
@@ -215,7 +214,7 @@ $$(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
 \Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2}$$
 This value will be confirmed, in the ppb range, in Section III.
 
-\section {The omnipresence of the Kotov cycle in astrophysics}
+\section{The omnipresence of the Kotov cycle in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K2} )^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -313,7 +312,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \end{figure}
 
 
-\section {The Tifft, Arp and Pioneer effects}
+\section{The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now this
 speed $v_{1}$ is compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
@@ -324,7 +323,7 @@ density $\rho_{c}$ .
 Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ . This corresponds to
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
-\section {The Magical Logic of Prospective Dimensional Analysis}
+\section{The intriguing Logic of Prospective Dimensional Analysis}
 
 Physical relations use principally physical quantities as monomials of type $Q = M^{x} L^{y} T^{t}$ , where
 the three categories, M, L and T are Mass, Length and Time measurements, and where the exponents are
@@ -353,8 +352,8 @@ Now, the elimination of c in the above R formula means that the simplest basic d
 analysis starting from $\hbar$, G and m, the Electron-Proton-Neutron mean mass gives a good
 approximation for R/2. Indeed, in the Hypothesis of a Coherent Cosmos, it is logical to discard c
 which is far two small a speed. This has not been observed during one century, since c is always
-believed to be the single mandatory foundation of Space-Time. The warning of Poincaré, the true
-discoverer of Relativity: 'use 4D space but do not confound Space and Time' has long been
+believed to be the single mandatory foundation of Space-Time. The warning of Poincare, the true
+discoverer of Relativity: `use 4D space but do not confound Space and Time` has long been
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 $$l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2$$
@@ -394,7 +393,5 @@ confirms the above Planck wall breakdown.
 
 
 For updating nomenclature run the following commands:
-
 makeindex Thesis-main.nlo -s nomencl.ist -o Thesis-main.nls
-
 makeindex LettersClassification.nlo -s nomencl.ist -o LettersClassification.
