--- a/chapter2.tex
+++ b/chapter2.tex
@@ -5,15 +5,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section {The Arithmetical Monster Prime 137}
+\section{The Arithmetical Monster Prime 137}
 
 The pertinence of our above simple polynomial relations are not admitted by the standard
 community, for instance arguing that since the proton is composite, its mass cannot enter simple
 relations. The same argument is presented for the theoretical dependence of the electric constant a
-with other constants g and $g\prime$, or with the energy level. These are reductionist arguments, unable toexplain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences.
-By contrast, the holistic approach implies immergences from a comprehension of the Cosmos. It is a
-pity that this term `immergence` is a neologism.
-The Eddington's proposal for a was the whole number 137, which intrigued some physicists for a
+with other constants g and $g\prime$, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences.
+By contrast, the holistic approach implies immergences from a comprehension of the Cosmos. What a
+pity for `immergence` to be a neologism.
+The Eddington's proposal for a was the whole number 137, which intrigued many physicists for a
 century, but apparently nobody signaled it has a fundamental mathematical property: it appears as a
 Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
@@ -40,7 +40,7 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 $ln137/ln(a/137) \approx (2+135/d_{e})^{2}$
 meaning the ratio a/137 acts as a canonical ratio.
 
-\section {The Arithmetical Logic : Holic Principle and Topological Axis}
+\section{The Arithmetical Logic : Holic Principle and Topological Axis}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$ , where T is a time ratio and L a length one, resolving, since 2 and 3 are co-
@@ -55,7 +55,7 @@ dimension n = 30, the natural extension of the above :
 $T^{2} = L^{3} = M^{5} = n^{30}$ where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, concerning only the apparent world. The entire Holic
 Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , and of dimension 210.
 
-\section {The retention of Information}
+\section{The retention of Information}
 
 The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
 relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
@@ -72,7 +72,7 @@ Time, specially the non-locality phenomena, they agree for complete determinism,
 Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
-\section {Omnipresence of $a^{a}$}
+\section{Ubiquity of $a^{a}$}
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
