--- a/chapter4.tex
+++ b/chapter4.tex
@@ -4,14 +4,23 @@
 \label{chap:chapter_4}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Discussion}
 \section {Discussion}
 
-This article has answered several main problems : 1. Unification Gravitation-Quantum Physics,
-by rehabilitating the forgotten Eddington's statistical theory, 2. The real significance of Quantum
-Physics, by assuming Physics is based on Arithmetics, 3. The overall unification by showing that
-cosmology is the basis of all science, 4. The role of dimensionless parameters, by proving that they
+This article has answered several main problems : 
+
+\begin {Enumerate}
+
+\item[1.] Unification Gravitation-Quantum Physics,
+by rehabilitating the forgotten Eddington's statistical theory, 
+\item[2.] The real significance of Quantum
+Physics, by assuming Physics is based on Arithmetics, 
+\item[3.] The overall unification by showing that
+cosmology is the basis of all science, 
+\item[4.] The role of dimensionless parameters, by proving that they
 are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
-Holic Principle and 5. The so-called Dark energy proportion 0.7, which is a false problem, since the
+Holic Principle and 
+\item[5.] The so-called Dark energy proportion 0.7, which is a false problem, since the
 trivial ratio between gravitational energy and critical one of the observable universe is 3/10.
 The high precision (ppb) of the relations shown in the present article prove that the traditional
 scientific thinking is not at all baffled by the physical parameter values, meaning they are mere
@@ -22,13 +31,12 @@ high precision in the measurement of the Fermi constant, Muon mass, the backgrou
 and the Kotov cosmic period must be saluted as decisive achievements. Now, we have also shown
 [3] direct connexions between physical and biological parameters which have escaped researchers.
 So, while the 'Anthropic Principle' states that Life implies a favored Cosmos among a Multiverse,
-the 'Inverse Anthropic Principle' [3] is more logical, stating that an all-deterministic single Cosmos
-implies Life, in contradiction with the Darwin 'accidental life' approach, a generally admitted so-
-called 'theory' which is contradicted by so many missing leaks [26].
-There is presently a debate in physics community. Only a minority believes in a Single Final
-Theory, while a large majority have abandoned hope and believes seriously in the extreme
-consequence of the 'Anthropic Principle', the Multiverse conundrum. The present article settles the
-debate in favor of a single steady-state cosmos.
+the `Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
+implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
+called `theory` which is contradicted by so many missing links [26].
+Whilst the physicists community debates; the minority believes in a Single Final
+Theory, whereas a vast majority have given-up their believes towards an `Anthropic Principle` primacy, the Multiverse conundrum. The present article settles the
+arguments in favor of a single steady-state cosmos.
 Another type of separation exists, but with not any debate: only a small minority think Physics
 and Mathematics are unified, while a large majority separates the two domains (so separating also
 Biology). The present article shows that the former are right: physical constants are mathematical
@@ -51,3 +59,4 @@ in present mainstream thinking. Firstly, in biology, the assimilation of Darwin 
 with a scientific theory. Secondly, in quantum physics, the so-called 'incertitude relations', which are
 only manifestations of the general (Field and flickering Matter) wave propagation, through Fourier
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
+\end {Enumerate}
