--- a/chapter2.tex
+++ b/chapter2.tex
@@ -65,7 +65,7 @@ thermal character. But in a totally deterministic cosmos, there is no paradox. T
 connected with the black hole information paradigm [20]. Independently of our approach, an
 argument in favor of a total retention of information was tied to a non-evolution cosmology
 [21], Moreover, we have shown that formalisms of Holography and Unitary Matrix Quantum
-Physics are very similar [3]. Note that $e^{a}$ is also compatible with the half volume of the proton, with
+Physics are very similar [3]. One notice that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-
 Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
@@ -76,7 +76,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
-$u_{3}^(2^9) \approx (2(a2 + 2sqrt{\mu}))^{64} \approx a^{a}$
+$u_{3}^(2^9) \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}$
 defining a to 39 ppm, where μ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
@@ -85,15 +85,15 @@ Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_{\Theta} = 1.1333 \
 the above Supercycle period $T/ t_{\Theta}$ shows, with $\delta = R\prime/R$, to 0.4\%, 2\% and 0.6\%:
 $$\delta \times T/t_{\Theta} \approx (e^{e})^{137} \approx O_{M}^{3} \approx 496^{60}$$
 implying a liaison between $O_{M}$ , 137 and the famous String dimension 496, tied to the Higgs Boson
-(see Fig.1). Note the following combination of the three dimensionless parameters, the electrical
+(see Fig.1). One is struck by the following combination of the three dimensionless parameters, the electrical
 one a, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \approx 8.4345$:
 $$F/af \approx 496$$
 Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%:
 $\Pi_{happy} \approx \delta \times a^{a}$. Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 $a^{a} \approx u 1^(3\times(2^{8}-1))$
-defining a to 0.3 ppm. So the number a a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
-simplest arithmetics generators. Moreover a a has been connected [3] to the canonical $e^{1/e}$ and the
+defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
+simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
 5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
 
 
