--- a/chapter3.tex
+++ b/chapter3.tex
@@ -17,9 +17,9 @@ Armand Wyler singularized a value $a_{W}$ approaching a to 0.6 ppm and confirmed
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching p to 18.824 ppm.
 A confirmation of a symmetry between a and 137 is the following relation involving H, the
 Hydrogen electron mass ratio, precise to 83 ppb:
-$$a/137 ≈ (6\pi^{5} H)^{1/2} /p$$
-Note that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
-manifestation of the general neglectance of the Hierarchy Principle.
+$$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
+One observe that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
+manifestation of the general neglectance of the Hierarchical Principle.
 
 \section {The Archimedes constant $\pi$ as a calculation basis}
 
