--- a/chapter4.tex
+++ b/chapter4.tex
@@ -7,19 +7,23 @@
 \chapter{Discussion}
 \section {Discussion}
 
-This article has answered several main problems : 
+This article aims to solve the following problems : 
 
 \begin {Enumerate}
 
 \item[1.] Unification Gravitation-Quantum Physics,
-by rehabilitating the forgotten Eddington's statistical theory, 
+by rehabilitating the forgotten Eddington's statistical theory. 
+
 \item[2.] The real significance of Quantum
-Physics, by assuming Physics is based on Arithmetics, 
+Physics, by assuming Physics is based on Arithmetics. 
+
 \item[3.] The overall unification by showing that
-cosmology is the basis of all science, 
+cosmology is the basis of all science. 
+
 \item[4.] The role of dimensionless parameters, by proving that they
 are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
-Holic Principle and 
+Holic Principle.
+
 \item[5.] The so-called Dark energy proportion 0.7, which is a false problem, since the
 trivial ratio between gravitational energy and critical one of the observable universe is 3/10.
 The high precision (ppb) of the relations shown in the present article prove that the traditional
