--- a/chapter5.tex
+++ b/chapter5.tex
@@ -19,10 +19,10 @@ dilemna factor by $10^{122}$ .
 The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
 be confirmed by recent studies [30].
 The simplest method of looking for simple monomial expressions involving mathematical
-constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: 'Nobody has
+constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
 ever wondered what the Universe would be if π were not equal to 3.14159.... Similarly no one
-should be worried what the Universe would be if a were not 137.035999.... ' This is a definite
-refutation of the Multiverse Hypothesis.
+should be worried what the Universe would be if a were not 137.035999...`. It definitly
+disproves the Multiverse Hypothesis.
 The present article confirms also the Topological Axis, which was obtained by the simplest
 visualizing method to represent in a single figure the characteristic lengths in macro and micro-
 physics, taking the electron wavelength as unity. The pertinence of the Topological Axis confirms
@@ -57,8 +57,8 @@ Holic Principle, shows direct pertinence. In particular it emphatizes the 30 dim
 appear decisive in the Topological Axis.
 The simplest proof of the computation basis character of the electrical parameter a is provided
 by the multiple appearance of the terms $e^{a}$ and $a^{a}$ . The later is of order $e^{p/e}$ , while $e^{1/e}$ is decisive for
-the operational definition of e. The fact that a a appears also in the fifth Optimal (305 notes) Musical
-Scale indicates a liaison with Arithmetics.
+the operational definition of e. The fact that $a^{a}$ appears also in the 5th Optimal (305 notes) Musical
+Scale highlights a liaison with Arithmetics.
 Now, the deep significance of a number of dimensions is the number of independent variables,
 which is a fundamental invariant, whatever the theory [32]. So, it is normal to introduce the
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
@@ -69,7 +69,7 @@ seriously a cosmic influence, characterized by the Kotov's period and length. Al
 and Arp effects must be seriously considered, and used to constrain the flickering Time-Length-
 Mass process.
 It is so previsible that the very large infra-red telescopes in preparation will show in the very far
-field old-type galaxies instead of young ones. Then no artifice, as inflation, black energy,
+field old-type galaxies instead of nascent ones. Then no artifice, as inflation, black energy,
 multiverse, will not save the already refuted standard evolutionary model.
 It is now clear that present mathematics are incomplete, and this article announces a
 Reunification of Philosophy, Mathematics, Physics, Informatics and Theoretical Biology.
