--- a/abstract.tex
+++ b/abstract.tex
@@ -30,15 +30,15 @@ Arp observations. The Kotov period, omnipresent in astrophysics, is directly rel
 single-electron cosmology by a $10^{-9}$ relation. In addition to e, the Archimedes constant $\pi$
 and the electric constant $a = 137.036$ appear as privileged calculation basis. The fusion
 Mathematics-Physics is confirmed by $10^{-9}$ precise relations with physical parameters
-implying Eddington's 137 and Atiyah constant. The later enters the Topological axis in
+implying Eddington's 137 and Atiyah constant. The latter enters the Topological axis in
 liaison with the canonical Galaxy Group radius, the graviton mass and the Higgs Boson,
 the later being associated to the string dimension $d = 496$. The dramatic connexion of
-Atiyah constant with the Sternheimer scale factor confirms the fusion of Computation
+Atiyah constant with the Sternheimer scale factor confirms the fusion of Computational
 Physics with Theoretical Biology. In particular, the Supercycle Period connects, through the
 Monster group cardinal, with the Kotov period, itself tied to the well-defined DNA bi-codon
 mass. The ratio between the Universe mass and the mass associated with the Kotov period,
 identified with a photon mass, is close to the square of the Monster order. The ratio between
 the Supercycle period and the Chronon quantum is close to the third power of the Monster
-order, also close to $ e^{137e}$ and $ d^{60}$ . It is predicted that the future infra-red spatial telescopes
-will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely
+order, also close to $ e^{137e}$ and $ d^{60}$ . Our predictive analysis tend to lift the veil about the future infra-red spatial telescopes
+which are due to find mature galaxies in the very far range, instead of a Dark Space, disproving once and for all
 the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
