--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -127,6 +127,12 @@ Sir Michael Atiyah.}}}
 
 \include{chapter2}
 
+\include{chapter3}
+
+\include{chapter4}
+
+\include{chapter5}
+
 \bibliographystyle{plainnat}
 \bibliography{references}
 
