--- a/chapter3.tex
+++ b/chapter3.tex
@@ -29,45 +29,45 @@ main dimension 26 renders, to 0.1\%, the same form $f{26} \approx 6(2\pi^{2} a^{
 4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
 ppm:
 $$(p/n) (R/\lambdabar_{e})^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
-The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
+The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
 2 \times 137$. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
-that π is a intermediate rational calculation basis: in this case, the rational value $\pi_{0} = (355u-22)/
-(113u+7)$ corresponds to the above G value to 10^{-8} accuracy.
-Since $(R/\lambdabar_e )^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
+that $\pi$ is a intermediate rational calculation basis: in this case, the rational value $\pi_{0} = (355u-22)/
+(113u+7)$ corresponds to the above G value to $10^{-8}$ accuracy.
+Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
 involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
 The scale with 155 notes is not known, but 137 appears also in the classical musical scales [3], in
-particular the fifth 306 notes scale (about π 5 ), in liaison with the canonical definition of the optimal
+particular the 5th 306 notes scale (about $\pi^{5}$), in conjunction with the canonical definition of the optimal
 scale e, encountered all along above, and confirmed below.
-Note that entire powers of π appears in the 2 ppm Reilly formula: $a \approx 4\pi^{3} + \pi^{2} + \pi$
-Recall that whole powers of π appears also in the even order Riemann series.
+One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: $a \approx 4\pi^{3} + \pi^{2} + \pi$
+Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 \section {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjonction:
-$$f{e 2 } = exp(2 e2 + 1⁄2 ) \approx exp(e^{2e} + e^{2} )$$
-The supplementary term exp(e 2 ) is close to a^{3/2} . Note that $e^{2}$ has the following musical property:
+$$f{e^{2}} = exp(2 e^{2} + 1⁄2 ) \approx exp(e^{2e} + e^{2} )$$
+The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
-a series converging very much rapidly than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms defines
+a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
 the occidental 12 tones scale.
 
 \section {The electroweak constant mathematical fine tuning}
 
-The Particle standard model achieved a unification between electromagnetism and weak
-nuclear force. So we look for a relation involving a, 137, $a_{w}$ and the mathematical constants. One
+The Particle standard model achieved the unification between electromagnetism and weak
+nuclear force. One ought to look for the relation involving a, 137, $a_{w}$ and the mathematical constants. One
 immediately gets:
-$$a_w ≈ (2γ137a/π)^3$$
-Now, by introducing the characteristic length $$l_{eF} = (G_F /m_e c 2 )^{1/3}$$ , this electroweak constant appears as
-a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , so:
-$$\frac{\lambdabar}{l_{eF}} \approx 2γ137a/\pi$$
+$$a_w \approx (2\gamma \cdot 137 \cdot a/\pi)^3$$
+Now, by introducing the featured length $$l_{eF} = (G_F /m_e c 2 )^{1/3}$$ , the electroweak constant appears as
+a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , yielding to:
+$$\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi$$
 see below how this formulae simplifies again by using the Atiyah Constant.
 
 \section {The Muon and Tau fine tuning}
 
 Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$, inside its $2.5 10^{-7}$
-indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e}\cdot c^{2}} \approx
-m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H} )}/am_{e}^{3}$ . This corresponds to a muon mass relative to electron μ = 206.7682869, inside its
+indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
+m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . This corresponds to a muon mass relative to electron μ = 206.7682869, inside its
 $2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where μ and τ are the Muon and Tau masses relative to Electron:
 $$(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}$$
@@ -82,10 +82,9 @@ confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 \section {The Intermediate Bosons mathematical fine tuning}
 
 The computer indicates, with n ≈ 1838.68366089(17) the neutron/electron mass ratio:
-$$W \approx γa137 2 / 3\pi d^{e}$$
-$$Z \approx ap 2 \pi^{4} / 137 d_{e}^{n}$$
-With these values, the above relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ corresponds to the above G value in the
-ppb range.
+$$W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}$$
+$$Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}$$
+Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
 
 \section {The Direct Gravitational Constant mathematical fine-tuning}
 
@@ -97,14 +96,14 @@ $$(aa_{w}^{1/2} /\pi d e )^{1/3} \approx 4\pi n\prime/ \gamma^{a}$$
 where $n\prime = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
 in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
 the fractional development of π which is itself very close to $n/2\pi$ to $3.4 10^{-6}$ . Since the fractional
-development of π is always a non-resolved problem, this confirms that present mathematics is
-incomplete and that Nature uses rational approximations for π.
+development of $\pi$ is always a non-resolved problem, this confirms that present mathematics is
+incomplete and that Nature uses rational approximations for $\pi$.
 
 \section {The Atiyah constant}
 
-Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His last
-work in this domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplification term [24]. Indeed this
-constant $\Gamma$ simplifies some of the above relations:
+Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His ultimate
+findings in his domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplified term [24]. Indeed this
+constant $\Gamma$ clarifies some of the expressions given below:
 $$a_{w} = (137 \times 2 \Gamma)^3{$}$
 $$W \approx 137^{2} \Gamma / 3d^{e}$$
 $$( \Gamma\sqrt{a_{w}/\gamma d e )}^{1/3} \approx 4n\prime / \Gamma$$
@@ -119,10 +118,10 @@ $$m_{e} c^{2} f{\gamma\Gamma} \approx 125.175 GeV$$
 compatible with the Higgs Boson energy, interesting to note the perfect match with the dimension index $k \approx \pi: \gamma\Gamma
 \approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains :
 $\Gamma \approx e^\pi + 2$
-meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about n = Γ .
+meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about $n = \Gamma$.
 The following double correlation is specially suggestive (2.2 and 0.3 ppm):
 $$a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\pi}$$
-the first one is due to Reilly, and the second one confirms the R value. Moreover (0.013\%, 0.046\%):
+the first one is due to Reilly, and the second one confirms the R value. Moreover the uncertainty ranges from 0.013\% to 0.046\%:
 $a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}$
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
