--- a/chapter3.tex
+++ b/chapter3.tex
@@ -46,7 +46,7 @@ Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjonction:
-$$f{e^{2}} = exp(2 e^{2} + 1⁄2 ) \approx exp(e^{2e} + e^{2} )$$
+$$f{e^{2}} = exp(2^{e^{2+1⁄2}) \approx exp(e^{2e}+e^{2})$$
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
@@ -69,10 +69,10 @@ Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2}
 indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
 m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . This corresponds to a muon mass relative to electron μ = 206.7682869, inside its
 $2 \times 10^{-8}$ measurement range.
-Now the Koide relation [22], where μ and τ are the Muon and Tau masses relative to Electron:
+Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 $$(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}$$
-has a mathematical justification in term of circulating matrix. It predicted correctly the tau/electron
-mass ratio at an epoch where its measurement was false to 3 sigmas. With the above μ value, it
+has a mathematical justification in term of circulating matrix. The correctly predicted tau/electron
+mass ratio at an epoch during which its measurement was false to 3 sigmas. With the above $\mu$ value, it
 gives $$\tau \approx 3477.441701$$. This Koide relation, quite discarded by the communality, is another sign of
 the serious incompleteness of present Particle Physics standard model. This value correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics (to $10^{-7}$ ):
@@ -81,7 +81,7 @@ confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 \section {The Intermediate Bosons mathematical fine tuning}
 
-The computer indicates, with n ≈ 1838.68366089(17) the neutron/electron mass ratio:
+The computer indicates, with $n ≈ 1838.68366089(17)$ the neutron/electron mass ratio:
 $$W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}$$
 $$Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}$$
 Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
@@ -95,8 +95,8 @@ leading to:
 $$(aa_{w}^{1/2} /\pi d e )^{1/3} \approx 4\pi n\prime/ \gamma^{a}$$
 where $n\prime = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
 in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
-the fractional development of π which is itself very close to $n/2\pi$ to $3.4 10^{-6}$ . Since the fractional
-development of $\pi$ is always a non-resolved problem, this confirms that present mathematics is
+the fractional development of $\pi$ which is itself very close to $n/2\pi$ to $3.4 \times 10^{-6}$ . Since the fractional
+development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
 \section {The Atiyah constant}
@@ -104,11 +104,11 @@ incomplete and that Nature uses rational approximations for $\pi$.
 Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His ultimate
 findings in his domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplified term [24]. Indeed this
 constant $\Gamma$ clarifies some of the expressions given below:
-$$a_{w} = (137 \times 2 \Gamma)^3{$}$
-$$W \approx 137^{2} \Gamma / 3d^{e}$$
-$$( \Gamma\sqrt{a_{w}/\gamma d e )}^{1/3} \approx 4n\prime / \Gamma$$
+$$a_{w} = (137 \times 2 \Gamma)^{3}$$
+$$W \approx 137^{2} \Gamma / 3d_{e}$$
+$$( \Gamma\sqrt{a_{w}/\gamma d_{e})}^{1/3} \approx 4n\prime / \Gamma$$
 and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
-$$ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma )^{3} /F$$
+$$ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F$$
 Now, as recalled before in the Holic Principle, the exponents represents the number of
 dimensions. So, this corresponds to a dimensional reduction, by eliminating 137, from 9D and 6D to
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
@@ -122,6 +122,6 @@ meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4
 The following double correlation is specially suggestive (2.2 and 0.3 ppm):
 $$a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\pi}$$
 the first one is due to Reilly, and the second one confirms the R value. Moreover the uncertainty ranges from 0.013\% to 0.046\%:
-$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}$
+$$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}$$
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
