--- a/chapter3.tex
+++ b/chapter3.tex
@@ -46,7 +46,7 @@ Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjonction:
-$$f{e^{2}} = exp(2^{e^{2+1⁄2}) \approx exp(e^{2e}+e^{2})$$
+$$f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}) \approx exp(e^{2e}+e^{2})$$
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
@@ -67,7 +67,7 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 
 Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$, inside its $2.5 10^{-7}$
 indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
-m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . This corresponds to a muon mass relative to electron μ = 206.7682869, inside its
+m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . It yields to a muon mass relative to electron μ = 206.7682869, inside its
 $2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 $$(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}$$
@@ -75,13 +75,13 @@ has a mathematical justification in term of circulating matrix. The correctly pr
 mass ratio at an epoch during which its measurement was false to 3 sigmas. With the above $\mu$ value, it
 gives $$\tau \approx 3477.441701$$. This Koide relation, quite discarded by the communality, is another sign of
 the serious incompleteness of present Particle Physics standard model. This value correlates with the
-term $1+1/\sqrt{a}$, central in quantum electrodynamics (to $10^{-7}$ ):
+term $1+1/\sqrt{a}$, central in quantum electrodynamics to $10^{-7}$:
 $$1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}$$
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 \section {The Intermediate Bosons mathematical fine tuning}
 
-The computer indicates, with $n ≈ 1838.68366089(17)$ the neutron/electron mass ratio:
+The computer indicates, with $n \approx 1838.68366089(17)$ the neutron/electron mass ratio:
 $$W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}$$
 $$Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}$$
 Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
