--- a/chapter3.tex
+++ b/chapter3.tex
@@ -45,8 +45,8 @@ Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 \section {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
-conjonction:
-$$f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}) \approx exp(e^{2e}+e^{2})$$
+conjunction:
+$$ f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}) \approx exp(e^{2e}+e^{2}) $$
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
