--- a/chapter4.tex
+++ b/chapter4.tex
@@ -8,20 +8,20 @@
 
 This article aims to solve the following problems : 
 
-\item[1.] Unification Gravitation-Quantum Physics,
+\item 1. Unification Gravitation-Quantum Physics,
 by rehabilitating the forgotten Eddington's statistical theory. 
 
-\item[2.] The real significance of Quantum
+\item 2. The real significance of Quantum
 Physics, by assuming Physics is based on Arithmetics. 
 
-\item[3.] The overall unification by showing that
+\item 3. The overall unification by showing that
 cosmology is the basis of all science. 
 
-\item[4.] The role of dimensionless parameters, by proving that they
+\item 4. The role of dimensionless parameters, by proving that they
 are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
 Holic Principle.
 
-\item[5.] The so-called Dark energy proportion 0.7, which is a false problem, since the
+\item 5. The so-called Dark energy proportion 0.7, which is a false problem, since the
 trivial ratio between gravitational energy and critical one of the observable universe is 3/10.
 The high precision (ppb) of the relations shown in the present article prove that the traditional
 scientific thinking is not at all baffled by the physical parameter values, meaning they are mere
