--- a/chapter4.tex
+++ b/chapter4.tex
@@ -8,20 +8,20 @@
 
 This article aims to solve the following problems : 
 
-\item 1. Unification Gravitation-Quantum Physics,
+\item 1 Unification Gravitation-Quantum Physics,
 by rehabilitating the forgotten Eddington's statistical theory. 
 
-\item 2. The real significance of Quantum
+\item 2 The real significance of Quantum
 Physics, by assuming Physics is based on Arithmetics. 
 
-\item 3. The overall unification by showing that
+\item 3 The overall unification by showing that
 cosmology is the basis of all science. 
 
-\item 4. The role of dimensionless parameters, by proving that they
+\item 4 The role of dimensionless parameters, by proving that they
 are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
 Holic Principle.
 
-\item 5. The so-called Dark energy proportion 0.7, which is a false problem, since the
+\item 5 The so-called Dark energy proportion 0.7, which is a false problem, since the
 trivial ratio between gravitational energy and critical one of the observable universe is 3/10.
 The high precision (ppb) of the relations shown in the present article prove that the traditional
 scientific thinking is not at all baffled by the physical parameter values, meaning they are mere
@@ -31,7 +31,7 @@ Mendeleiev and Mendel to decisive discoveries, as recalled in the introduction. 
 high precision in the measurement of the Fermi constant, Muon mass, the background temperature
 and the Kotov cosmic period must be saluted as decisive achievements. Now, we have also shown
 [3] direct connexions between physical and biological parameters which have escaped researchers.
-So, while the 'Anthropic Principle' states that Life implies a favored Cosmos among a Multiverse,
+So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse,
 the `Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
 implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
 called `theory` which is contradicted by so many missing links [26].
@@ -45,7 +45,7 @@ constants, so the present-day mathematics are still in enfancy, not realizing th
 sporadic groups is a crucial discovery for physics. In particular, we have clearly shown that
 Grandcosmos is a computer which uses optimal physico-mathematical constants as calculation basis
 and that they are present in DNA characteristics [3]. The present article show definitely the liaisons
-with π, e and γ, and rehabilitates String theories, also abandoned by a majority [27].
+with $\pi$, e and $\gamma$, and rehabilitates String theories, also abandoned by a majority [27].
 There is also the Determinism separation, a majority believing seriously that 'God plays dices',in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
 directly the Large time periodicity of an all-deterministic Grandcosmos, as it gives in an elementary
 calculation the visible Universe horizon radius, in a formula which was present for a century in
