--- a/chapter3.tex
+++ b/chapter3.tex
@@ -46,7 +46,7 @@ Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjunction:
-$$ f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}) \approx exp(e^{2e}+e^{2}) $$
+$$ f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2}) $$
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
@@ -57,8 +57,8 @@ the occidental 12 tones scale.
 The Particle standard model achieved the unification between electromagnetism and weak
 nuclear force. One ought to look for the relation involving a, 137, $a_{w}$ and the mathematical constants. One
 immediately gets:
-$$a_w \approx (2\gamma \cdot 137 \cdot a/\pi)^3$$
-Now, by introducing the featured length $$l_{eF} = (G_F /m_e c 2 )^{1/3}$$ , the electroweak constant appears as
+$$a_{w} \approx (2\gamma \cdot 137 \cdot a/\pi)^3$$
+Now, by introducing the featured length $$l_{eF} = (\frac{G_{F}}{m_{e} \cdot c^{2}})^{1/3}$$ , the electroweak constant appears as
 a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , yielding to:
 $$\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi$$
 see below how this formulae simplifies again by using the Atiyah Constant.
@@ -92,7 +92,7 @@ Computer analysis shows the following ppb precise extension for the deviation be
 $a_{G}$ ,
 $$(2^{127} / a_{G})^{1/2} \approx d_{e} (H/p)^{3} \approx a_{w}^{1/2} (a/\pi)^{4} ( \gamma/4n)^{3}$$
 leading to:
-$$(aa_{w}^{1/2} /\pi d e )^{1/3} \approx 4\pi n\prime/ \gamma^{a}$$
+$$(aa_{w}^{1/2} /\pi d_{e})^{1/3} \approx 4\pi n\prime/ \gamma^{a}$$
 where $n\prime = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
 in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to $3.4 \times 10^{-6}$ . Since the fractional
