--- a/chapter4.tex
+++ b/chapter4.tex
@@ -7,21 +7,21 @@
 \section {Discussion}
 
 This article aims to solve the following problems : 
-
-\item 1 Unification Gravitation-Quantum Physics,
+\begin{itemize}
+\item 1/ Unification Gravitation-Quantum Physics,
 by rehabilitating the forgotten Eddington's statistical theory. 
 
-\item 2 The real significance of Quantum
+\item 2/ The real significance of Quantum
 Physics, by assuming Physics is based on Arithmetics. 
 
-\item 3 The overall unification by showing that
+\item 3/ The overall unification by showing that
 cosmology is the basis of all science. 
 
-\item 4 The role of dimensionless parameters, by proving that they
+\item 4/ The role of dimensionless parameters, by proving that they
 are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
 Holic Principle.
 
-\item 5 The so-called Dark energy proportion 0.7, which is a false problem, since the
+\item 5/ The so-called Dark energy proportion 0.7, which is a false problem, since the
 trivial ratio between gravitational energy and critical one of the observable universe is 3/10.
 The high precision (ppb) of the relations shown in the present article prove that the traditional
 scientific thinking is not at all baffled by the physical parameter values, meaning they are mere
@@ -46,7 +46,7 @@ sporadic groups is a crucial discovery for physics. In particular, we have clear
 Grandcosmos is a computer which uses optimal physico-mathematical constants as calculation basis
 and that they are present in DNA characteristics [3]. The present article show definitely the liaisons
 with $\pi$, e and $\gamma$, and rehabilitates String theories, also abandoned by a majority [27].
-There is also the Determinism separation, a majority believing seriously that 'God plays dices',in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
+There is also the Determinism separation, a majority believing seriously that `God plays dices`,in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
 directly the Large time periodicity of an all-deterministic Grandcosmos, as it gives in an elementary
 calculation the visible Universe horizon radius, in a formula which was present for a century in
 astrophysics text-books: the limit of a star radius when the number of atoms reduce to unity [3].
@@ -60,3 +60,4 @@ in present mainstream thinking. Firstly, in biology, the assimilation of Darwin 
 with a scientific theory. Secondly, in quantum physics, the so-called 'incertitude relations', which are
 only manifestations of the general (Field and flickering Matter) wave propagation, through Fourier
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
+\end{itemize}
