--- a/chapter5.tex
+++ b/chapter5.tex
@@ -20,7 +20,7 @@ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. T
 be confirmed by recent studies [30].
 The simplest method of looking for simple monomial expressions involving mathematical
 constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
-ever wondered what the Universe would be if π were not equal to 3.14159.... Similarly no one
+ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if a were not 137.035999...`. It definitly
 disproves the Multiverse Hypothesis.
 The present article confirms also the Topological Axis, which was obtained by the simplest
@@ -43,7 +43,7 @@ Poincaré, the father of 4D Relativity Theory himself, recommended. Indeed their
 writing c = 1, impeded the fact that R is a trivial length, already present in astrophysical text-books.The simplest model, the gravitational Hydrogen molecule gives R, explaining the above 2 factor
 and justifying the elimination of c, as in the Bohr model. This corresponds to a Hubble constant
 70.790 (km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s),
-which confirms the direct novea measurement, but disagree (3σ) with the standard value.
+which confirms the direct novea measurement, but disagree $3\theta$ with the standard value.
 The simplest statistical theory of Eddington gave another justification to R. Also, particularly
 simple and elegant is the Large Eddington number, giving correctly the number of neutrons in the
 trivial fraction 3M/10 of the observable universe.
@@ -51,7 +51,7 @@ The simplest topological equations, the equality between dimensionless varieties
 area, 3D volume... appear to apply in cosmology, which is, for many, the hardiest chapter of
 physics. This modern, negative, opinion is in fact contrary to the ancient culture, for which the
 Cosmology is the first of all science, so must be the simplest. In the original sens of the word
-'revolution', it is a return to the source of Science, the 'all is whole number', of Pythagoras. Even the
+`revolution`, it is a return to the source of Science, the 'all is whole number', of Pythagoras. Even the
 degenerate form of topological or holographic relations, the simplest diophantine equations, the
 Holic Principle, shows direct pertinence. In particular it emphatizes the 30 dimensions, which
 appear decisive in the Topological Axis.
