--- a/chapter1.tex
+++ b/chapter1.tex
@@ -104,7 +104,7 @@ In the standard evolutionary view, the observed homogeneity of causally disconne
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
-The cosmic wavelength $\lambdabar_M \sim 10^{-95} m$ breaks the `Planck wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
+The cosmic wavelength $\lambdabar_{M} \sim 10^{-95} m$ breaks the `Planck wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : this is why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
 (3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
 zero: the density of the so-called `dark energy` being compatible with 7/10, this dark energy is a
@@ -122,17 +122,17 @@ In a better approximation, justified below, R is replaced in the above relation 
 physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
 of radius $R\prime$ appears as the spherical hologram representation of the outer Grandcosmos:
-$$S\prime_{BH} = \pi(R\prime/l_{P} )^{2} = 2\pi R_{GC} /l_{P}$$
+$$S\prime_{BH} = \pi(R\prime/l_{P})^{2} = 2\pi R_{GC} /l_{P}$$
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar M$ ,
+of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 $$S_{BH} = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m}\ cdot R}{\lambdabar_{m}}$$
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
 from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
 the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
-analysis, such as $\pi$ (See Section III).
+analysis, such as $\pi$ (See Chapter 3).
 The immensity of the Cosmos thus receives a much simpler computo-holographic explanation than
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
@@ -143,11 +143,11 @@ Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic 
 Hydrogen apear, as well as that of the background radiation
 $2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
-background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
+background, there is a gap compatible with $(H/p G ) 2 p/6\pi_{5} $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
 This eliminates $l_{P}$ , so gives a relation independent of G:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
-=> $θ_{CMB} = 2.725820805$ Kelvin which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section III). Recall
+=> $θ_{CMB} = 2.725820805 K$ which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Chapter 3). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
 The critical mass is related to the elementary masses by:
@@ -181,7 +181,7 @@ $R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$.
 
 Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
 the replacement of R by $R_{1}$ is about $4\pi$ , the canonical form for $\sqrt{a}$, the deviation being compatible
-with $p/p_{0}$ , where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for p (Section III.I):
+with $p/p_{0}$ , where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for p (Section 3.1):
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx frac{4\pi^{p}}{p_{0}} \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
@@ -189,7 +189,7 @@ deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $
 range, with $\Gamma$, the Atiyah Constant (section 3.5).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
-graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section III.VIII.
+graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
 
 \section{The Kotov Cosmic Coherent Oscillation Period}
 
@@ -230,19 +230,19 @@ tied to cosmic influence. Indeed, the Kotov period shows itself rather particula
 In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct_{K}$ .
 Remarkable enough, a «mysterious» period $\approx 1/9$ days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
-(1946) claimed that « la période propre de vibration du Soleil, c'est-à-dire la période de son infra-
-son (1/9 de jour), a joué un rôle essentiel dans la distribution des planètes supérieures». Presumably,
+(1946) claimed that « la periode propre de vibration du Soleil, c'est-a-dire la periode de son infra-
+son (1/9 de jour), a joue un role essentiel dans la distribution des planetes superieures». Presumably,
 the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances
 and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
 discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
 Cosmos too (see Kotov, 2018, and references therein) .
-Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: thecorresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim
+Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: the corresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim
 thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
 Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
 general.
-This is evident from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15
+This is obvious from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
@@ -314,13 +314,13 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 
 \section{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now this
-speed $v_{1}$ is compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. If one considers
+velocity $v_{1}$ as being compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
-rejected. But it could be the sign of the galactic regeneration maintaining constant the visible
+rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
 density $\rho_{c}$ .
-Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ . This corresponds to
+Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$. It fits with
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
 \section{The intriguing Logic of Prospective Dimensional Analysis}
@@ -389,9 +389,3 @@ Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the
 $$t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}$$
 where the above Tifft factor F/a appears. The implication of the time $t\prime_{e} = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck wall breakdown.
-
-
-
-For updating nomenclature run the following commands:
-makeindex Thesis-main.nlo -s nomencl.ist -o Thesis-main.nls
-makeindex LettersClassification.nlo -s nomencl.ist -o LettersClassification.
