--- a/chapter1.tex
+++ b/chapter1.tex
@@ -204,10 +204,11 @@ deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $
 range, with $\Gamma$, the Atiyah Constant (section 3.5).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
-graviton mass being 
+graviton mass being: 
 \begin{equation}
 m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg
-\begin{equation}. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
+\end{equation} 
+The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
 
 \section{The Kotov Cosmic Coherent Oscillation Period}
 
