--- a/chapter5.tex
+++ b/chapter5.tex
@@ -78,3 +78,21 @@ to one of us; `While I appreciate your efforts in physics, please do not use my 
 other than referencing a published paper`. We salute his modesty, but his introduction of the rather
 unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
 of proving the existence of a fundamental theory.
+
+See Table \ref{table:table_ex} to learn how to create tables.
+
+\begin{table}
+\centering
+\caption{A table example}
+\begin{tabular}{ c c c c }
+\toprule
+\textbf{Dataset} & \textbf{Number of samples} & \textbf{Results} & \textbf{Results 2} \\
+\midrule                 
+  Ini & 1405 & 48 & 9 \\ 
+  Mid & 1196 & 52 & 10 \\ 
+  Fin & 1629 & 44 & 9 \\ 
+  Iso & 1372 & 39 & 8 \\ 
+  \bottomrule
+\end{tabular}
+\label{table:table_ex} 
+\end{table}
