--- a/chapter5.tex
+++ b/chapter5.tex
@@ -4,7 +4,7 @@
 \label{chap:chapter_5}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Conclusions}
+%\chapter{Conclusions}
 \section {Simplicity at work}
 
 The application of the old direct scientific method, looking for fine tuning between physical
