--- a/chapter1.tex
+++ b/chapter1.tex
@@ -69,7 +69,7 @@ century, was already contained in astrophysics textbooks. The universe radius am
 the limit of a mono-atomic star radius, of which the electrons are in degeneracy state. Eddingon was
 aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the
 Hubble measurement for R was false by an order of magnitude.
-The reason for this discrepancy is that Lemaître and Hubble considered galaxies of the Local
+The reason for this discrepancy is that Lemaitre and Hubble considered galaxies of the Local
 Group, which do not participate the so-called Space expansion. In fact, it suffices to introduce a
 repulsive force proportional to galaxy groups separation distance, for explaining the canonical
 exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
@@ -80,16 +80,10 @@ In the steady-state cosmology, such a repulsive force between galaxy groups is n
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: it would be the role of massive black holes.
 
-For instance, this paper \cite{fm1} is awesome.
-
-See Figure \ref{fig:figure_label} as an example on how to add figures to your publication.
-It is recommended that all figures to be kept in a separate directory.
-Note the `./figures/figure' in the example below.
-
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
-\caption{A figure example.}
+\caption{The Topological Axis.}
 \label{fig:figure_label}
 \end{figure}
 
